--- a/QuizAppBusiness/nbproject/project.properties
+++ b/QuizAppBusiness/nbproject/project.properties
@@ -30,12 +30,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.QuizAppCore.jar=../QuizAppCore/dist/QuizAppCore.jar
-file.reference.QuizAppPersistenceMySQL.jar=../QuizAppPersistenceMySQL/dist/QuizAppPersistenceMySQL.jar
+file.reference.QuizAppPersistenceRAM.jar=../QuizAppPersistenceRAM/dist/QuizAppPersistenceRAM.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.QuizAppCore.jar}:\
-    ${file.reference.QuizAppPersistenceMySQL.jar}
+    ${file.reference.QuizAppPersistenceRAM.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
