--- a/QuizAppPersistenceMySQL/nbproject/project.properties
+++ b/QuizAppPersistenceMySQL/nbproject/project.properties
@@ -36,8 +36,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.QuizAppCore.jar}:\
-    ${file.reference.QuizAppBusiness.jar}:\
-    ${file.reference.mysql-connector-java-5.1.42-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.42-bin.jar}:\
+    ${file.reference.QuizAppBusiness.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
