Alteração de bugs em testes

--- a/QuizAppPersistenceRAM/nbproject/project.properties
+++ b/QuizAppPersistenceRAM/nbproject/project.properties
@@ -29,13 +29,13 @@ dist.jar=${dist.dir}/QuizAppPersistenceRAM.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.QuizAppBusiness.jar=../../../Desktop/Quiz (Java) v2.0/QuizAppBusiness/dist/QuizAppBusiness.jar
-file.reference.QuizAppCore.jar=../../../Desktop/Quiz (Java) v2.0/QuizAppCore/dist/QuizAppCore.jar
+file.reference.QuizAppBusiness.jar=../QuizAppBusiness/dist/QuizAppBusiness.jar
+file.reference.QuizAppCore.jar=../QuizAppCore/dist/QuizAppCore.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.QuizAppBusiness.jar}:\
-    ${file.reference.QuizAppCore.jar}
+    ${file.reference.QuizAppCore.jar}:\
+    ${file.reference.QuizAppBusiness.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
