--- a/EasyQuiz (Java)/QuizAppPersistenceMySQL/nbproject/private/private.properties
+++ b/EasyQuiz (Java)/QuizAppPersistenceMySQL/nbproject/private/private.properties
@@ -4,4 +4,4 @@ do.jar=true
 file.reference.mysql-connector-java-5.1.42-bin.jar=C:\\Users\\Luiz\\Documents\\GitHub\\easyquiz\\mysql-connector-java-5.1.42-bin.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Luiz\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+user.properties.file=C:\\Users\\andro\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
