--- a/EasyQuiz (Java)/QuizAppBusiness/nbproject/project.properties
+++ b/EasyQuiz (Java)/QuizAppBusiness/nbproject/project.properties
@@ -29,11 +29,13 @@ dist.jar=${dist.dir}/QuizAppBusiness.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.mysql-connector-java-5.1.42-bin.jar=../../mysql-connector-java-5.1.42-bin.jar
 file.reference.QuizAppCore.jar=../QuizAppCore/dist/QuizAppCore.jar
 file.reference.QuizAppPersistenceMySQL.jar=../QuizAppPersistenceMySQL/dist/QuizAppPersistenceMySQL.jar
 includes=**
 jar.compress=false
 javac.classpath=\
+    ${file.reference.mysql-connector-java-5.1.42-bin.jar}:\
     ${file.reference.QuizAppCore.jar}:\
     ${file.reference.QuizAppPersistenceMySQL.jar}
 # Space-separated list of extra javac options
