--- a/EasyQuiz (Java)/QuizAppCore/nbproject/project.properties
+++ b/EasyQuiz (Java)/QuizAppCore/nbproject/project.properties
@@ -29,9 +29,15 @@ dist.jar=${dist.dir}/QuizAppCore.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.mysql-connector-java-5.1.42-bin.jar=../../mysql-connector-java-5.1.42-bin.jar
+file.reference.QuizAppBusiness.jar=../QuizAppBusiness/dist/QuizAppBusiness.jar
+file.reference.QuizAppPersistenceMySQL.jar=../QuizAppPersistenceMySQL/dist/QuizAppPersistenceMySQL.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-java-5.1.42-bin.jar}:\
+    ${file.reference.QuizAppPersistenceMySQL.jar}:\
+    ${file.reference.QuizAppBusiness.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
