--- a/EasyQuiz (Java)/QuizAppPersistenceMySQL/nbproject/project.properties
+++ b/EasyQuiz (Java)/QuizAppPersistenceMySQL/nbproject/project.properties
@@ -29,14 +29,14 @@ dist.jar=${dist.dir}/QuizAppPersistenceMySQL.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-5.1.42-bin.jar=../mysql-connector-java-5.1.42/mysql-connector-java-5.1.42-bin.jar
+file.reference.mysql-connector-java-5.1.42-bin.jar=../../mysql-connector-java-5.1.42-bin.jar
 file.reference.QuizAppBusiness.jar=../QuizAppBusiness/dist/QuizAppBusiness.jar
 file.reference.QuizAppCore.jar=../QuizAppCore/dist/QuizAppCore.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.QuizAppCore.jar}:\
     ${file.reference.mysql-connector-java-5.1.42-bin.jar}:\
+    ${file.reference.QuizAppCore.jar}:\
     ${file.reference.QuizAppBusiness.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
