--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@
 
 # Excecao para mysqlconnector
 
-!mysql-connector-java-5.1.42.jar
+!mysql-connector-java-5.1.42-bin.jar
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
