Atualiza EasyQuiz(Java)

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@
 hs_err_pid*
 /EasyQuiz (Java)/Teste/nbproject/private/
 /EasyQuiz (Java)/Teste/build/
+/EasyQuiz/nbproject/private/
+/EasyQuiz/build/
